# report-orchestrator

./: .gitignore  AGENTS.md  CONTRACTS.md  README.md  SYSTEM_ARCHITECTURE.md  VERIFICATION_REPORT_20241228.md  infra.md  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/scripts/: dashboard_queries.py  e2e_curate_and_register_smoketest.py  local_curated_smoketest.py  local_raw_smoketest.py  make_mock_raw_data.py  precompute_dashboard.py  preflight_ci.sh  register_partition_smoketest.py  run_e2e_smoke.py  seed_nov2024.py  smoke_athena_select1.py  smoke_ctas_runner.py  test_sse.py
backend/services/analysis-lambda/: app.py
backend/services/batch-lambda/: handler.py
backend/services/batch-lambda/mock_generators/: appsflyer.py  cohort.py  ga4.py
backend/services/batch-lambda/tests/: test_ga4_generator.py  test_generators.py
backend/services/query-lambda/: athena_runner.py  handler.py  policy_guard.py  reporting_policy.json  row_mapper.py  sql_builder.py
backend/services/report-lambda/: conftest.py  handler.py  requirements.txt
backend/services/report-orchestrator-lambda/: ARCHITECTURE_REVIEW.md  package-lock.json  package.json  tsconfig.json
backend/services/viz-lambda/: app.py  chart_selector.py
backend/src/report_system/config/: settings.py
backend/tests/: confest.py  test_analysis_lambda.py  test_appsflyer_connector.py  test_bedrock_adapters.py  test_ctas_appsflyer.py  test_dashboard_queries.py  test_executeathenaquery.py  test_precompute_dashboard.py  test_query_lambda_buildsql.py  test_streaming_serializer.py  test_viz_lambda.py
(+270 files in other folders)
